--- a/package.json
+++ b/package.json
@@ -5,5 +5,32 @@
   "main": "dist/index.js",
   "repository": "https://github.com/hendrikniemann/wrike-client",
   "author": "hendrikniemann",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "npm run build:clean && npm run build:babel && npm run build:flow",
+    "build:clean": "rimraf dist",
+    "build:babel": "babel src/ -d dist/",
+    "build:flow": "flow-copy-source -v src dist"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.49.1",
+    "flow-copy-source": "^1.2.0",
+    "rimraf": "^2.6.1"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": true
+          }
+        }
+      ],
+      "flow"
+    ]
+  }
 }
