--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "wrike-client",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "description": "A client to fetch data from Wrike",
   "main": "dist/index.js",
   "repository": "https://github.com/hendrikniemann/wrike-client",
   "author": "hendrikniemann",
   "license": "MIT",
   "scripts": {
+    "prepublish": "npm run build",
     "build": "npm run build:clean && npm run build:babel && npm run build:flow",
     "build:clean": "rimraf dist",
     "build:babel": "babel src/ -d dist/",
